apps/private-gpt/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: private-gpt
  labels:
    app.kubernetes.io/name: private-gpt
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: private-gpt
  template:
    metadata:
      labels:
        app.kubernetes.io/name: private-gpt
    spec:
      volumes:
      - name: yasr-volume
        persistentVolumeClaim:
          claimName: yasr-volume
      - name: tz-config
        hostPath:
          path: /etc/localtime
      dnsPolicy: ClusterFirst
      dnsConfig: {}
      containers:
      # frontend ---------------------------------------------------------
      - name: frontend
        image: hkotel/private-gpt:frontend-nightly
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /
            port: 3001
          initialDelaySeconds: 30
          timeoutSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 250Mi
          limits:
            cpu: 500m
            memory: 500Mi
        volumeMounts:
          - mountPath: /etc/localtime
            name: tz-config
            readOnly: true
          - mountPath: /app/data
            name: yasr-volume
            subPath: configs/private-gpt
        ports:
          - name: fe-http
            containerPort: 3001
            protocol: TCP
      # api ----------------------------------------------------------
      - name: api
        image: hkotel/private-gpt:api-nightly
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            scheme: HTTP
            path: /api/app/about
            port: 9000
          initialDelaySeconds: 30
          timeoutSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 250Mi
          limits:
            cpu: 500m
            memory: 500Mi
        volumeMounts:
        - mountPath: /app/data
          name: yasr-volume
          subPath: configs/private-gpt
        - mountPath: /etc/localtime
          name: tz-config
          readOnly: true
        ports:
        - name: api-http
          containerPort: 9000
          protocol: TCP
