apps/private-gpt/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  namespace: default
  labels:
    app.kubernetes.io/name: mealie
  annotations:
    forecastle.stakater.com/appName: "Mealie"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/icon: "https://raw.githubusercontent.com/hay-kot/mealie/mealie-next/frontend/static/icon.png"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - recipes.${CLUSTER_DOMAIN_NAME}
    secretName: internal-ingress-cert
  rules:
  - host: recipes.${CLUSTER_DOMAIN_NAME}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mealie
            port:
              name: fe-http
